@@ -4,7 +4,7 @@ default: all
 
 all: local t_alloc t_array t_base_name t_bin t_buffer1 t_buffer2 \
 	t_dgetline t_dir_array t_dir_hash t_dir_name t_dstring t_env t_fd \
-	t_fd_seek t_fmt t_fmt2 t_fmt3 t_fmt4 t_fmt5 t_fmt6 t_get_opt \
+	t_fd_seek t_fmt t_fmt2 t_fmt3 t_fmt4 t_fmt5 t_fmt6 t_fmt7 t_get_opt \
 	t_hashtable1 t_hashtable2 t_hashtable3 t_hashtable4 t_hashtable5 \
 	t_hashtable6 t_hashtable7 t_hashtable8 t_iarray1 t_iarray2 t_iarray3 \
 	t_iarray4 t_iarray5 t_iarray6 t_iarray7 t_open t_sarray1 t_scan_doub \
@@ -160,6 +160,12 @@ t_fmt6:\
 t_fmt6.o:\
 	cc-compile t_fmt6.c ../fmt.h ../str.h 
 	./cc-compile t_fmt6.c
+t_fmt7:\
+	cc-link t_fmt7.ld t_fmt7.o ../fmt.a ../str.a t_assert.o 
+	./cc-link t_fmt7 t_fmt7.o ../fmt.a ../str.a t_assert.o 
+t_fmt7.o:\
+	cc-compile t_fmt7.c ../fmt.h ../str.h 
+	./cc-compile t_fmt7.c
 t_get_opt:\
 	cc-link t_get_opt.ld t_get_opt.o ../get_opt.a ../buffer.a \
 	../error.a ../bin.a ../str.a t_assert.o 
@@ -526,28 +532,28 @@ obj_clean:
 	t_dir_hash t_dir_hash.o t_dir_name t_dir_name.o t_dstring \
 	t_dstring.o t_env t_env.o t_fd t_fd.o t_fd_seek t_fd_seek.o t_fmt \
 	t_fmt.o t_fmt2 t_fmt2.o t_fmt3 t_fmt3.o t_fmt4 t_fmt4.o t_fmt5 \
-	t_fmt5.o t_fmt6 t_fmt6.o t_get_opt t_get_opt.o t_hashtable1 \
-	t_hashtable1.o t_hashtable2 t_hashtable2.o t_hashtable3 \
+	t_fmt5.o t_fmt6 t_fmt6.o t_fmt7 t_fmt7.o t_get_opt t_get_opt.o \
+	t_hashtable1 t_hashtable1.o t_hashtable2 t_hashtable2.o t_hashtable3 \
 	t_hashtable3.o t_hashtable4 t_hashtable4.o t_hashtable5 \
 	t_hashtable5.o t_hashtable6 t_hashtable6.o t_hashtable7 \
 	t_hashtable7.o t_hashtable8 t_hashtable8.o t_hashtable_c.o \
-	t_hashtable_d.o t_iarray.o t_iarray1 t_iarray1.o 
-	rm -f t_iarray2 t_iarray2.o t_iarray3 t_iarray3.o t_iarray4 \
-	t_iarray4.o t_iarray5 t_iarray5.o t_iarray6 t_iarray6.o t_iarray7 \
-	t_iarray7.o t_iarray_util.o t_open t_open.o t_sarray1 t_sarray1.o \
-	t_scan_doub t_scan_doub.o t_scan_float t_scan_float.o t_scan_uc \
-	t_scan_uc.o t_scan_ucb t_scan_ucb.o t_scan_uco t_scan_uco.o \
-	t_scan_ucx t_scan_ucx.o t_scan_ui t_scan_ui.o t_scan_uib \
-	t_scan_uib.o t_scan_uio t_scan_uio.o t_scan_uix t_scan_uix.o \
-	t_scan_ul t_scan_ul.o t_scan_ulb t_scan_ulb.o t_scan_ull \
-	t_scan_ull.o t_scan_ullb t_scan_ullb.o t_scan_ullo t_scan_ullo.o \
-	t_scan_ullx t_scan_ullx.o t_scan_ulo t_scan_ulo.o t_scan_ulx \
-	t_scan_ulx.o t_scan_us t_scan_us.o t_scan_usb t_scan_usb.o \
-	t_scan_uso t_scan_uso.o t_scan_usx t_scan_usx.o t_scanstr \
-	t_scanstr.o t_sgetline 
-	rm -f t_sgetline.o t_sig t_sig.o t_squeue1 t_squeue1.o t_sstack1 \
-	t_sstack1.o t_sstring t_sstring.o t_stalloc t_stalloc.o t_str \
-	t_str.o t_uint2 t_uint2.o 
+	t_hashtable_d.o t_iarray.o 
+	rm -f t_iarray1 t_iarray1.o t_iarray2 t_iarray2.o t_iarray3 \
+	t_iarray3.o t_iarray4 t_iarray4.o t_iarray5 t_iarray5.o t_iarray6 \
+	t_iarray6.o t_iarray7 t_iarray7.o t_iarray_util.o t_open t_open.o \
+	t_sarray1 t_sarray1.o t_scan_doub t_scan_doub.o t_scan_float \
+	t_scan_float.o t_scan_uc t_scan_uc.o t_scan_ucb t_scan_ucb.o \
+	t_scan_uco t_scan_uco.o t_scan_ucx t_scan_ucx.o t_scan_ui \
+	t_scan_ui.o t_scan_uib t_scan_uib.o t_scan_uio t_scan_uio.o \
+	t_scan_uix t_scan_uix.o t_scan_ul t_scan_ul.o t_scan_ulb \
+	t_scan_ulb.o t_scan_ull t_scan_ull.o t_scan_ullb t_scan_ullb.o \
+	t_scan_ullo t_scan_ullo.o t_scan_ullx t_scan_ullx.o t_scan_ulo \
+	t_scan_ulo.o t_scan_ulx t_scan_ulx.o t_scan_us t_scan_us.o \
+	t_scan_usb t_scan_usb.o t_scan_uso t_scan_uso.o t_scan_usx \
+	t_scan_usx.o t_scanstr 
+	rm -f t_scanstr.o t_sgetline t_sgetline.o t_sig t_sig.o t_squeue1 \
+	t_squeue1.o t_sstack1 t_sstack1.o t_sstring t_sstring.o t_stalloc \
+	t_stalloc.o t_str t_str.o t_uint2 t_uint2.o 
 
 tests: list_tests run_tests
 tests_clean:
