@@ -1,0 +1,4 @@
+t_fmt7.o
+../fmt.a
+../str.a
+t_assert.o
