@@ -1,2 +1,3 @@
+-g -W -Wall -pedantic -std=c99
 
 These are passed to the C compiler.
