@@ -34,11 +34,36 @@ unsigned int fmt_ucharx(char *, unsigned char);
 unsigned int fmt_ucharo(char *, unsigned char);
 unsigned int fmt_ucharb(char *, unsigned char);
 
+unsigned int fmt_long(char *, long);
+unsigned int fmt_longx(char *, long);
+unsigned int fmt_longo(char *, long);
+unsigned int fmt_longb(char *, long);
+
+unsigned int fmt_int(char *, int);
+unsigned int fmt_intx(char *, int);
+unsigned int fmt_into(char *, int);
+unsigned int fmt_intb(char *, int);
+
+unsigned int fmt_short(char *, short);
+unsigned int fmt_shortx(char *, short);
+unsigned int fmt_shorto(char *, short);
+unsigned int fmt_shortb(char *, short);
+
+unsigned int fmt_char(char *, char);
+unsigned int fmt_charx(char *, char);
+unsigned int fmt_charo(char *, char);
+unsigned int fmt_charb(char *, char);
+
 #if defined(CORELIB_USE_LONGLONG)
 unsigned int fmt_ulonglong(char *, unsigned long long);
 unsigned int fmt_ulonglongx(char *, unsigned long long);
 unsigned int fmt_ulonglongo(char *, unsigned long long);
 unsigned int fmt_ulonglongb(char *, unsigned long long);
+
+unsigned int fmt_longlong(char *, long long);
+unsigned int fmt_longlongx(char *, long long);
+unsigned int fmt_longlongo(char *, long long);
+unsigned int fmt_longlongb(char *, long long);
 #endif
 
 unsigned int fmt_float(char *, float, unsigned int);
@@ -47,18 +72,13 @@ unsigned int fmt_double(char *, double, unsigned int);
 unsigned long fmt_str(char *, const char *);
 unsigned long fmt_nstr(char *, const char *, unsigned long);
 
-unsigned int fmt_pad_ulong(char *, unsigned long, unsigned int, unsigned char, 
-                           unsigned int (*)(char *, unsigned long));
-unsigned int fmt_pad_uint(char *, unsigned int, unsigned int, unsigned char,
-                          unsigned int (*)(char *, unsigned int));
-unsigned int fmt_pad_ushort(char *, unsigned short, unsigned int, unsigned char,
-                            unsigned int (*)(char *, unsigned short));
-unsigned int fmt_pad_uchar(char *, unsigned char, unsigned int, unsigned char,
-                           unsigned int (*)(char *, unsigned char));
+unsigned int fmt_pad_ulong(char *, unsigned long, unsigned int, unsigned char, unsigned int (*)(char *, unsigned long));
+unsigned int fmt_pad_uint(char *, unsigned int, unsigned int, unsigned char, unsigned int (*)(char *, unsigned int));
+unsigned int fmt_pad_ushort(char *, unsigned short, unsigned int, unsigned char, unsigned int (*)(char *, unsigned short));
+unsigned int fmt_pad_uchar(char *, unsigned char, unsigned int, unsigned char, unsigned int (*)(char *, unsigned char));
 
 #if defined(CORELIB_USE_LONGLONG)
-unsigned int fmt_pad_ullong(char *, unsigned long long, unsigned int, unsigned char,
-                            unsigned int (*)(char *, unsigned long long));
+unsigned int fmt_pad_ullong(char *, unsigned long long, unsigned int, unsigned char, unsigned int (*)(char *, unsigned long long));
 #endif
 
 #endif
