@@ -1,27 +1,27 @@
 fmt_double.o
 fmt_float.o
 fmt_nstr.o
-fmt_pad_uc.o
-fmt_pad_ui.o
-fmt_pad_ul.o
-fmt_pad_us.o
+fmt_pad_c.o
+fmt_pad_i.o
+fmt_pad_l.o
+fmt_pad_s.o
 fmt_str.o
-fmt_uchar.o
-fmt_ucharb.o
-fmt_ucharo.o
-fmt_ucharx.o
-fmt_uint.o
-fmt_uintb.o
-fmt_uinto.o
-fmt_uintx.o
-fmt_ullong.o
-fmt_ullongo.o
-fmt_ullongx.o
-fmt_ulong.o
-fmt_ulongb.o
-fmt_ulongo.o
-fmt_ulongx.o
-fmt_ushort.o
-fmt_ushortb.o
-fmt_ushorto.o
-fmt_ushortx.o
+fmt_char.o
+fmt_charb.o
+fmt_charo.o
+fmt_charx.o
+fmt_int.o
+fmt_intb.o
+fmt_into.o
+fmt_intx.o
+fmt_llong.o
+fmt_llongo.o
+fmt_llongx.o
+fmt_long.o
+fmt_longb.o
+fmt_longo.o
+fmt_longx.o
+fmt_short.o
+fmt_shortb.o
+fmt_shorto.o
+fmt_shortx.o
