@@ -19,3 +19,17 @@ unsigned int fmt_ulong(char *str, unsigned long ul)
   return len;
 }
 
+unsigned int fmt_long(char *str, long lo)
+{
+  unsigned int len = 0;
+  unsigned long ul;
+
+  if (lo < 0) {
+    if (str) *str++ = '-';
+    ++len;
+    ul = -lo;
+  } else
+    ul = lo;
+
+  return len + fmt_ulong(str, ul);
+}
