@@ -268,3 +268,8 @@
 20070519 version: corelib 0.541
 20070525 code: added dgetline.
 20070525 code: added sgetline_size and sgetline_data.
+20070527 code: added signed fmt_* equivalents. 'unsigned' filenames were
+               renamed to 'signed' filenames and now unsigned and signed
+               variants of functions reside in these new filenames. for
+               example, fmt_ulong.c was renamed to fmt_long.c and now
+               both fmt_ulong and fmt_long are defined in this file.
